Implemented GetTaskImage
